2015-07-27  H.J. Lu  <hongjiu.lu@intel.com>

	* ld-elfvers/vers.exp (build_vers_lib_no_pic): Pass $PLT_CFLAGS
	to build_binary.

2015-07-27  H.J. Lu  <hongjiu.lu@intel.com>

	* config/default.exp (PLT_CFLAGS): New.

2015-07-27  Szabolcs Nagy  <szabolcs.nagy@arm.com>

	PR ld/18705
	* ld-aarch64/protected-data.d: New.
	* ld-aarch64/protected-data.s: New.
	* ld-aarch64/aarch64-elf.exp: Add new test.

2015-07-27  Szabolcs Nagy  <szabolcs.nagy@arm.com>

	PR ld/18705
	* ld-arm/protected-data.d: New.
	* ld-arm/protected-data.s: New.
	* ld-arm/arm-elf.exp: Add new test.

2015-07-26  H.J. Lu  <hongjiu.lu@intel.com>

	PR ld/18718
	* ld-elf/shared.exp: Compile PR ld/18718 tests with -O2.

2015-07-26  H.J. Lu  <hongjiu.lu@intel.com>

	* lib/ld-lib.exp (run_host_cmd_yesno): Set errcnt and warncnt
	to 0.

2015-07-25  H.J. Lu  <hongjiu.lu@intel.com>

	PR ld/18718
	* ld-elf/pr18718.c: New file.
	* ld-elf/shared.exp: Run tests for PR ld/18718.

2015-07-25  Alan Modra  <amodra@gmail.com>

	* ld-elf/symbolic-func.s,
	* ld-elf/symbolic-func.r: New test.
	* ld-elf/elf.exp: Run it.

2015-07-24  H.J. Lu  <hongjiu.lu@intel.com>

	* ld-elf/compress.exp (build_tests): Replace -g with -ggdb3.
	* ld-elf/zlibbegin.rS: Also expect "GC".
	* ld-elf/zlibnormal.rS: Likewise.

2015-07-16  Jiong Wang  <jiong.wang@arm.com>

	* ld-aarch64/tls-tiny-ld.s: New file.
	* ld-aarch64/tls-tiny-ld.d: Ditto.
	* ld-aarch64/aarch64-elf.exp: Run new test.

2015-07-14  H.J. Lu  <hongjiu.lu@intel.com>

	* ld-elf/zlibbegin.rS: Updated to .debug_.* with the
	SHF_COMPRESSED bit.
	* ld-elf/zlibnormal.rS: Likewise.

2015-07-09  Catherine Moore  <clm@codesourcery.com>

	* ld-mips-elf/attr-gnu-4-08.d: Update expected output.
	* ld-mips-elf/attr-gnu-4-09.d: New.
	* ld-mips-elf/attr-gnu-4-19.d: New.
	* ld-mips-elf/attr-gnu-4-29.d: New.
	* ld-mips-elf/attr-gnu-4-39.d: New.
	* ld-mips-elf/attr-gnu-4-49.d: New.
	* ld-mips-elf/attr-gnu-4-59.d: New.
	* ld-mips-elf/attr-gnu-4-69.d: New.
	* ld-mips-elf/attr-gnu-4-79.d: New.